Fixed nav bar and Z-index

--- a/style.css
+++ b/style.css
@@ -19,18 +19,20 @@ body{
     background-color: rgb(46, 52, 64);
     top: 0;
     min-height: 50px;
-    margin: 8px;
     border-radius: 10px;
-    padding: 6px;
+    padding: 10px;
+    margin: 10px;
     position: sticky;
+    z-index: 1;
 
 }
 #nav-link li{
     display: inline;
-    align-self: left;
-    margin-right: 60px;
+    display: flex;
+    padding-left: 10px;
+    padding-right: 10px;
     text-decoration: none;
-    float: center;
+    float: right;
 }
 #nav-link #nav-bar-title{
     float: left;
@@ -42,11 +44,12 @@ body{
     background-color: rgb(46, 52, 64);
     padding: 40px;
     border-radius: 10px;
-    margin: 20px;
+    margin: 10px;
 }
 #project-tile{
     display: flex;
     justify-content: space-evenly;
+    z-index: 2;
 }
 #landing-page, #dailydinner, #kamisama{
     width: 360px;
